--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,18 +1,33 @@
 .designFooter{
-    width: 1340px;
+    display: grid;
+    grid-template-areas:
+        "head head"
+        "main main"
+        "hr   hr"
+        "foot foot";
+    width: 100%;
     height: 244px;
     background-color: #265E6C;
 }
 
+.imgHr{
+    grid-area: hr;
+    width: 100%;
+}
+
 .containerLogoText{
+    grid-area: main;
     display: grid;
-    justify-items: center;
+    column-gap: 24px;
+    align-items: center;
     grid-template-columns: auto auto;
 }
 
 .areaMcontigo{
     display: grid;
-
+    width: 100%;
+    justify-content: end;
+    align-items: center;
 }
 
 .imgMcontigo{
@@ -21,8 +36,8 @@
 }
 
 .areaTextFooter{
-    width: 400px;
-    height: 80px;
+    align-content:start;
+    width: 100%;
     font-size: 12px;
     font-family: Merriweather;
     color: #FFFF;
@@ -30,10 +45,11 @@
 }
 
 .bottomButtonsContainer{
+    grid-area: foot;
     display: grid;
     justify-items: center;
-    gap: 50px 100px;
-    grid-template-columns: auto auto auto;
+    grid-auto-flow: column;
+    justify-content: space-evenly;
 }
 
 .bottomButtons{
@@ -41,6 +57,9 @@
     border: none;
     background: none;
     cursor: pointer;
-    position: absolute;
+    color: #FFFF;
+    height: 24px;
+    font-family: 16px;
+    font-family: sans-serif;
 }
 
