--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -6,7 +6,7 @@
         "hr   hr"
         "foot foot";
     width: 100%;
-    height: 244px;
+    height: 15vh;
     background-color: #265E6C;
 }
 
