--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,6 +1,6 @@
 .topHeader{
     width: 1340px;
-    height: 64px;
+    height: 7vh;
 }
 
 .headerImage{
@@ -15,12 +15,10 @@
     position: absolute;
     top: 30px;
     left: 95px;
+    z-index: 1;
 }
 
-.menuIcon{
-    width: 38px;
-    height: 24px;
-}
+
 
 .searchButton{
     display: grid;
