--- a/src/components/popUp/popUp.module.css
+++ b/src/components/popUp/popUp.module.css
@@ -1,8 +1,21 @@
-.modal {
+@media (min-width: 930px) and (max-width: 4000px) {
+  .img{
+    width: 100%;
+  }
+  p{
+    text-align: center;
+  }
+  .centerContent{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .modal {
     display: block;
     position: fixed;
     z-index: 1;
-    padding-top: 115px;
+    padding-top: 10px;
     left: 0;
     top: 0;
     width: 100%;
@@ -15,11 +28,11 @@
   .modalContent {
     display: flex;
     flex-direction: column;
-    background-color: #e9deba;
-    margin: auto;
-    padding: 20px;
-    border: 10px solid #fc7117;
-    border-radius: 12px;
+    background-color: #B378FF;
+
+    color:white;
+    border: 10px solid #B378FF;
+    border-radius: 5px;
     width: 500px;
     height: fit-content;
   }
@@ -39,134 +52,35 @@
     text-decoration: none;
     cursor: pointer;
   }
-  
-  .titleModal {
-    display: flex;
-    font-family: sans-serif;
-    font-size: 45px;
-    justify-content: center;
-    margin-bottom: 8px;
-  }
-  
-  .buttonEdit {
-    background-color: black;
-    border: solid 2px;
-    border-color: #7ed090;
-    border-radius: 10px;
-    width: 40px;
-    height: 40px;
-    margin-right: 208px;
-    padding: 0px;
-    transition-duration: 0.4s;
-  }
-  
-  .buttonEdit:hover {
-    border-color: #4b8d59;
-  }
-  
-  .editionImg {
-    width: 32px;
-    height: 30px;
-  }
-  
-  .AllInputs {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    margin-top: 10px;
-  }
-  
-  .inputModal {
-    display: flex;
-    margin-top: 2%;
-    width: 90%;
-    height: 33px;
-    border: solid 3px;
-    border-radius: 8px;
-    border-color: #717171;
-    background-color: #ffffff;
-    color: rgb(0, 0, 0);
-    font-family: revert;
-    font-size: 20px;
-  }
-  
-  .inputModal:focus {
-    border-color: #fc7117;
-  }
-  
-  .inputModal:hover {
-    border-color: #fc7117;
-  }
-  
-  .selectModal {
-    display: flex;
-    margin-top: 2%;
-    width: 100%;
-    height: 38px;
-    border: solid 3px;
-    border-radius: 8px;
-    border-color: #717171;
-    background-color: #ffffff;
-    color: rgb(0, 0, 0);
-    font-family: revert;
-    font-size: 20px;
-    cursor: pointer;
-  }
-  
-  .selectModal:focus {
-    border-color: #fc7117;
-  }
-  
-  .selectModal:hover {
-    border-color: #fc7117;
-  }
 
-  .img{
-    width: 100%;
-  }
-  
-  .saveEditButton {
-    width: 105px;
-    height: 40px;
-    border-radius: 10px;
-    color: rgb(0, 0, 0);
-    font-family: revert;
-    font-size: 15px;
-    font-weight: bold;
-    text-align: center;
-    border-radius: 18px;
-    border: solid 3px;
-    background-color: #7ed090;
-    border-color: #717171;
-    transition-duration: 0.4s;
-    cursor: pointer;
-  }
-  
-  .saveEditButton:hover {
-    background-color: #52bb69;
-    color: #ffff;
-    border-color: #fc7117;
-  }
-  
-  .areaSaveButton {
-    display: flex;
-    justify-content: center;
-    margin-top: 30px;
-  }
+}
   
   /* Inicia responsive mobile */
   
-  @media (max-width: 850px) {
+  @media (max-width: 930px) {
     .img{
-      width: 100%;
+      width: auto;
+      height: 20vh;
     }
-    
+    p{
+      margin-top: 5px;
+      margin-bottom: 0px;
+    }
+    .centerContent{
+      height: 100%;
+      display: flex;
+      justify-content: center;
+    }
+    .artContainer{
+      display: flex;
+      flex-flow: column;
+      align-items: center;
+    }
     .modal {
       display: block;
       position: fixed;
       z-index: 1;
-      padding-top: 115px;
+      padding-top: 10px;
       left: 0;
       top: 0;
       width: 100%;
@@ -179,12 +93,13 @@
     .modalContent {
       display: flex;
       flex-direction: column;
-      background-color: #e9deba;
+      background-color: #B378FF;
       margin: auto;
       padding: 20px;
-      border: 10px solid #fc7117;
-      border-radius: 12px;
-      width: 325px;
+      border: 2px solid #B378FF;
+      color:white;
+      border-radius: 5px;
+      width: 80%;
       height: fit-content;
     }
   
@@ -204,114 +119,4 @@
       cursor: pointer;
     }
   
-    .titleModal {
-      display: flex;
-      font-family: sans-serif;
-      font-size: 45px;
-      justify-content: center;
-      margin-bottom: 8px;
-    }
-  
-    .buttonEdit {
-      background-color: black;
-      border: solid 2px;
-      border-color: #7ed090;
-      border-radius: 10px;
-      width: 40px;
-      height: 40px;
-      margin-right: 208px;
-      padding: 0px;
-      transition-duration: 0.4s;
-    }
-  
-    .buttonEdit:hover {
-      border-color: #4b8d59;
-    }
-  
-    .editionImg {
-      width: 32px;
-      height: 30px;
-    }
-  
-    .AllInputs {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 10px;
-      margin-top: 10px;
-    }
-  
-    .inputModal {
-      display: flex;
-      margin-top: 2%;
-      width: 90%;
-      height: 33px;
-      border: solid 3px;
-      border-radius: 8px;
-      border-color: #717171;
-      background-color: #ffffff;
-      color: rgb(0, 0, 0);
-      font-family: revert;
-      font-size: 20px;
-    }
-  
-    .inputModal:focus {
-      border-color: #fc7117;
-    }
-  
-    .inputModal:hover {
-      border-color: #fc7117;
-    }
-  
-    .selectModal {
-      display: flex;
-      margin-top: 2%;
-      width: 100%;
-      height: 38px;
-      border: solid 3px;
-      border-radius: 8px;
-      border-color: #717171;
-      background-color: #ffffff;
-      color: rgb(0, 0, 0);
-      font-family: revert;
-      font-size: 20px;
-      cursor: pointer;
-    }
-  
-    .selectModal:focus {
-      border-color: #fc7117;
-    }
-  
-    .selectModal:hover {
-      border-color: #fc7117;
-    }
-  
-    .saveEditButton {
-      width: 105px;
-      height: 40px;
-      border-radius: 10px;
-      color: rgb(0, 0, 0);
-      font-family: revert;
-      font-size: 15px;
-      font-weight: bold;
-      text-align: center;
-      border-radius: 18px;
-      border: solid 3px;
-      background-color: #7ed090;
-      border-color: #717171;
-      transition-duration: 0.4s;
-      cursor: pointer;
-    }
-  
-    .saveEditButton:hover {
-      background-color: #52bb69;
-      color: #ffff;
-      border-color: #fc7117;
-    }
-  
-    .areaSaveButton {
-      display: flex;
-      justify-content: center;
-      margin-top: 30px;
-    }
   }
