--- a/src/components/popUp/popUp.module.css
+++ b/src/components/popUp/popUp.module.css
@@ -11,6 +11,12 @@
     align-items: center;
     justify-content: center;
   }
+
+  .reviewFont{
+    font-size: 12px;
+    font-family: sans-serif;
+  }
+
   .modal {
     display: block;
     position: fixed;
