--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -7,7 +7,7 @@
             "hr   hr"
             "foot foot";
         width: 100%;
-        height: 15vh;
+        height: fit-content;
         background-color: #265E6C;
     }
 
@@ -75,7 +75,7 @@
             "hr   hr"
             "foot foot";
         width: 100%;
-        height: 15vh;
+        height: fit-content;
         background-color: #265E6C;
     }
 
