--- a/src/components/menu/menu.module.css
+++ b/src/components/menu/menu.module.css
@@ -41,3 +41,8 @@ h3{
 hr{
     border: 1px solid #E4E4E4;
 }
+
+a:link { text-decoration: none; }
+a:visited { text-decoration: none; }
+a:hover { text-decoration: none; }
+a:active { text-decoration: none; }
